test: add unit test against mock server for websocket api